[로또 미션] 김명지 미션 제출합니다. (#24)
* feat: Lotto 도메인 구현

- Lotto: 1부터 45 중 무작위 6개 숫자를 포함하는 리스트를 가지는 일급 컬렉션

* feat: InputView, OutputView 구현

* feat: Controller, Application 구현

* feat: Lottos 생성 및 Lotto 출력 로직 캡슐화

- List<Lotto>를 불변으로 만들어 보호하기 위해 Lottos 일급 컬렉션을 생성한다.
- outputView에서 Lottos 정보를 출력하는 두 메서드를 하나로 합친다.

* refactor: Lotto 리팩토링

- 매직넘버 제거
- toList -> getLotto로 변경하여 뜻을 명확하게 한다.
(toList의 경우 Lotto를 List로 만드는 것인지, Lotto 내부 리스트를 가리키고 있는지 명확하지 않음)

* fix: 로또 생성시 45가 포함되지 않는 문제 수정

* test: Lotto 생성 테스트 작성

* refactor: assertAll 사용하여 모든 검증 수행

* rename: lotto 패키지 추가

- Lotto와 Lottos를 lotto 패키지로 묶는다.

* refactor: Lottos 리팩토링

- toList -> getLottos로 메서드명을 변경하여 작업이 명확하게 드러나도록 한다.

* fix: 더 큰 범위의 예외로 수정

- 가격이 숫자로 들어오지 않을 경우와 0 미만일 경우 다시 입력받을 수 있도록 더 큰 범위의 예외로 수정

* refactor: 상수 접근제어자 private으로 변경

- 클래스 내부에서만 사용하므로 상수는 private 접근제어자로 둔다.
- 만약 public 상수를 선언할 경우에는 enum으로 정의하는 것이 타입 안정성을 제공하여 좋다.

* test: 검증값을 상수값이 아닌 값으로 표현하도록 수정

- 상수나 변수로 검증값을 둘 경우 테스트시 필요없는 의존성이 생겨 지양한다.
- 검증은 최대한 간단하게 수행한다. 변수나 상수를 이용하여 값 검증시 해당 값을 확인하기 위해 코드 위쪽까지 거슬러 올라가야한다.

* refactor: Lotto 리팩토링

- 상수 리스트 생성시에만 사용되는 작업은 static 블록으로 이동한다.
- 수동 로또 생성을 위한 정적 팩토리 메서드를 제공한다.
- 불변 리스트 + stream 조합을 사용하여 불변성을 지키며 결과 리스트를 얻는다.
- Collections.shuffle은 원본 리스트를 변경하므로 stream 연산에서 무작위 정수를 사용해 로또를 얻도록 수정한다.

* refactor: stream을 이용한 Lotto 리스트 생성

- Stream을 이용해 Lotto 리스트를 생성하고 toList()를 호출하여 불변 리스트를 반환한다.
- 당장 사용하지 않는 Lottos는 제거한다.

* refactor: 불필요한 정적 팩토리 메서드 제거

- 단순 객체 생성은 생성자로 충분하기 때문에 정적 팩토리 메서드를 제거한다.

* feat: 로또 당첨 1차 구현

* feat: LottoNumber 값 객체 생성

- 원시값을 포장하고 로또 숫자에 대한 검증 책임을 할당한다.

* feat: Lottos 일급 컬렉션 생성

- 로또 리스트를 일급 컬렉션으로 관리하여 로또 리스트에 대한 로직을 한 곳에 모은다.

* refactor: Lotto, Price 리팩토링

- 로또 하나의 가격을 로또 클래스에 둠으로써, 가격은 로또와 관련없이 가격 자체의 로직만 존재하도록 변경한다.
 - 가격 VO에 대한 연산 메서드를 정의한다.

* refactor: 컨트롤러 리팩토링

- 메서드 위치 변경
- 바뀐 코드에 맞춰 메서드명 수정

* feat: LottoResult 일급 컬렉션 생성

- 당첨 통계 로직을 LottoResult에 모은다.

* refactor: 메서드 순서 변경

* refac